# r2r_ur_controller

./: CMakeLists.txt  Cargo.toml  README.md  natively.sh  package.xml  r2r_cargo.cmake
docker/: Dockerfile  docker-compose.yaml  start.sh
docker/DockURSim/: LICENSE  README.md
examples/: move.rs  test.rs  test_handshake.rs  test_server.rs  test_with_state.rs
preparation/docker/: docker-compose.yaml
preparation/scenario/meshes/: big_plate.stl  black_plate.stl  black_plug.stl  box_500.stl  box_750.stl  box_757.stl  box_780.stl  box_787.stl  box_840.stl  camera_mount_empty.stl  camera_mount_empty_flushed.stl  camera_only.stl  camera_with_mount.stl  camera_with_mount_and_scan_space.stl  gantry.stl  (+15 more)
src/: lib.rs  lib_handshake.rs  main.rs
src/core/: driver.rs  mod.rs  state.rs  structs.rs
src/ros/: action_client.rs  control_ghost.rs  dashboard.rs  dashboard_client.rs  joint_subscriber.rs  mod.rs  publishers.rs  robot_state_publisher.rs  robot_state_to_redis.rs  state_publisher.rs  ur_script_driver.rs  urdf_parsing.rs
templates/: get_force.script  get_force_old.script  gripper_activate.script  gripper_move.script  gripper_move_new.script  gripper_move_old.script  gripper_open.script  lock_rsp.script  move_j.script  move_l.script  move_l_down.script  pick_vacuum.script  pick_vacuum_broken.script  pick_vacuum_old.script  pick_vacuum_old_old.script  place_vacuum.script  safe_move_j.script  safe_move_l_relative.script  set_payload.script  sleep.script  start_vacuum.script  stop_vacuum.script  unlock_rsp.script  unsafe_move_j.script  unsafe_move_l_relative.script
(+78 files in other folders)
